--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "chrismou/oauth2-discogs",
-    "description": "Discogs OAuth 2.0 Client Provider for The PHP League OAuth2-Client",
+    "name": "chrismou/oauth1-discogs",
+    "description": "Discogs OAuth 1.0 Client Provider for The PHP League OAuth1-Client",
     "type": "library",
     "license": "MIT",
     "authors": [
@@ -11,12 +11,12 @@
         }
     ],
     "support": {
-        "source": "https://github.com/chrismou/oauth2-discogs",
-        "issues": "https://github.com/chrismou/oauth2-discogs/issues"
+        "source": "https://github.com/chrismou/oauth1-discogs",
+        "issues": "https://github.com/chrismou/oauth1-discogs/issues"
     },
     "keywords": [
         "oauth",
-        "oauth2",
+        "oauth1",
         "client",
         "authorization",
         "authorisation",
@@ -25,7 +25,7 @@
     ],
     "require": {
         "php": ">=5.5",
-        "league/oauth2-client": "~1.0"
+        "league/oauth1-client": "~1.6"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
@@ -36,12 +36,12 @@
     },
     "autoload": {
         "psr-4": {
-            "Chrismou\\Discogs\\": "src/"
+            "Chrismou\\Oauth1\\Discogs\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Chrismou\\Discogs\\Tests\\": "tests/"
+            "Chrismou\\Oauth1\\Discogs\\Tests\\": "tests/"
         }
     },
     "extra": {
